--- a/app/src/main/res/layout/grid_list_item.xml
+++ b/app/src/main/res/layout/grid_list_item.xml
@@ -25,7 +25,7 @@
     app:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="194dp"
         android:layout_height="wrap_content">
 
         <!-- TODO: Note that this list item will be used in a grid view which requires a
@@ -56,10 +56,8 @@
             android:id="@+id/dogName"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp"
-            android:text="Leroy"
+            android:layout_margin="8dp"
+            android:text="@string/dog_name"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dogImage" />
@@ -68,23 +66,20 @@
             android:id="@+id/dogAge"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="8dp"
             android:text="@string/dog_age"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dogName" />
 
         <TextView
-            android:id="@+id/dogHobbie"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/dog_hobbies"
+            android:id="@+id/dogHobbies"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_margin="8dp"
+            android:text="Hobbies: Sleeping in dangerous places"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dogAge" />
 
